// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";

package com.example.replicated.register;

message SetValue {
  string register_id = 1 [(akkaserverless.field).entity_key = true];
  string value = 2;
}

message GetValue {
  string register_id = 1 [(akkaserverless.field).entity_key = true];
}

message CurrentValue {
  string value = 1;
}

// tag::replicated_entity[]
service RegisterService {
  option (akkaserverless.codegen) = {
    replicated_entity: {
      name: "com.example.replicated.register.domain.SomeRegister" // <1>
      entity_type: "some-register"
      replicated_register: { // <2>
        value: "com.example.replicated.register.domain.SomeValue" // <3>
      }
    }
  };

  rpc Set(SetValue) returns (google.protobuf.Empty);
  rpc Get(GetValue) returns (CurrentValue);
}
// end::replicated_entity[]